syntax = "proto3";

package trip_billing;

option go_package = "github.com/piresc/nebengjek/trip-billing-service/proto";

service TripBillingService {
  rpc StartTrip(TripStartRequest) returns (TripStartResponse) {}
  rpc EndTrip(TripEndRequest) returns (TripEndResponse) {}
  rpc GetTripCost(TripCostRequest) returns (TripCostResponse) {}
  rpc GetTripHistory(TripHistoryRequest) returns (TripHistoryResponse) {}
}

message TripStartRequest {
  string trip_id = 1;
  string passenger_id = 2;
  string driver_id = 3;
  Location pickup_location = 4;
  string start_time = 5;
}

message TripStartResponse {
  bool success = 1;
  string message = 2;
}

message TripEndRequest {
  string trip_id = 1;
  Location dropoff_location = 2;
  string end_time = 3;
  float distance = 4;
  float duration = 5;
}

message TripEndResponse {
  bool success = 1;
  string message = 2;
  TripCost cost = 3;
}

message Location {
  double latitude = 1;
  double longitude = 2;
}

message TripCostRequest {
  string trip_id = 1;
}

message TripCost {
  float base_fare = 1;
  float distance_fare = 2;
  float time_fare = 3;
  float total_amount = 4;
  string currency = 5;
}

message TripCostResponse {
  TripCost cost = 1;
  string status = 2;
}

message TripHistoryRequest {
  string user_id = 1;
  int32 page = 2;
  int32 limit = 3;
}

message TripHistoryResponse {
  repeated TripSummary trips = 1;
  int32 total_count = 2;
}

message TripSummary {
  string trip_id = 1;
  string passenger_id = 2;
  string driver_id = 3;
  Location pickup_location = 4;
  Location dropoff_location = 5;
  string start_time = 6;
  string end_time = 7;
  TripCost cost = 8;
  string status = 9;
}